# micro-vscode

./: UPDATE_LOG.md  commitlint.config.js  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml
src-tauri/capabilities/: main.json
src-tauri/src/: git.rs
src/components/: FileTabs.vue
src/lib/handle/: file.ts
src/monaco/: shiki.ts
src/pages/: Main.vue
src/pages/content/: Content.vue
src/pages/header/: Header.vue  HeaderMenu.vue  HeaderTool.vue  LayoutControl.vue
src/pages/toolbar/: FileMenuTool.vue  SearchTool.vue  Toolbar.vue
src/pages/toolbar/git-tool/: GitTool.vue
src/stores/: git.ts  project.ts
src/types/: index.ts
