[package]
name = "micro-vscode"
version = "0.0.0"
description = "A lightweight code editing and submission tool."
authors = ["shellingfordly", "linken"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "micro_vscode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
git2 = "0.19.0"
tauri-plugin-shell = "2.0.2"
tauri-plugin-fs = "2.0.3"
tauri-plugin-updater = "2.0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
